# nao_kick

./: CMakeLists.txt  bumper.cpp  bumper.h  main.cpp  qiproject.xml
